Fix for titles that are too big

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,7 +131,7 @@ body.helpxmain-article {
 body h1 {
   max-width: 1050px;
   line-height: 1.15;
-  font-size: 36px;
+  font-size: 2vw;
   font-weight: 500;
   text-align: left;
   word-break: break-word;
